# fabflow

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  setup_fabflow.sh
configs/: config.yaml
docs/: architecture.md  methods.md  references.md  sample_improvement_report.html  tableau_guide.md
huggingface/spaces/: Dockerfile  README.md  app.py  requirements.txt
notebooks/: 00_overview.ipynb  01_explore_fab_spec.ipynb  02_run_study_and_compare.ipynb  03_dashboard_preview.ipynb
scripts/: deploy_space.py
src/fabflow/: __init__.py  cli.py  config.py
src/fabflow/analysis/: __init__.py  compare.py  kpis.py  study.py
src/fabflow/dashboard/: __init__.py  app.py
src/fabflow/data/: __init__.py  synthetic_fab.py  warehouse.py
src/fabflow/export/: __init__.py  bi_export.py
src/fabflow/model/: __init__.py  dispatching.py  entities.py  fab.py
src/fabflow/reports/: __init__.py  improvement_report.py
src/fabflow/reports/templates/: improvement_report.html.j2
tests/: conftest.py  test_bi_export.py  test_cli.py  test_config.py  test_dispatching.py  test_fab_sim.py  test_synthetic_fab.py  test_warehouse_kpis.py
