[project]
name = "fabflow"
version = "0.1.0"
description = "FabFlow-Cortex: a SimPy discrete-event digital twin of a wafer fab, with a DuckDB analytics layer and a pre/post improvement study"
authors = [{name = "kbd0011"}]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "simpy>=4.1",
    "duckdb>=1.1",
    "pyarrow>=16",
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.13",
    "matplotlib>=3.9",
    "plotly>=5.20",
    "pyyaml>=6",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "typer>=0.12",
    "loguru>=0.7",
    "streamlit>=1.36",
    "jinja2>=3.1",
    "tabulate>=0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.5", "ipykernel>=6.29"]

[project.scripts]
fabflow = "fabflow.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fabflow"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501", "B008", "N812", "N806", "N803"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E702", "N806"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
markers = ["slow: long-running simulation tests (deselect with -m 'not slow')"]
